[options]
packages = find:

install_requires =
    farm-haystack @ git+https://github.com/deepset-ai/haystack.git
    transformers>=4.28.1
    datasets
    evaluate
    pandas
    tqdm
    numba
    openpyxl
    protobuf==3.20.2
    ujson
    fastapi
    uvicorn

[options.extras_require]
dev =
    black
    isort
    pytest
    pre-commit

benchmark =
    beir
    kilt @ git+https://github.com/facebookresearch/KILT.git

ui =
    streamlit
    st-annotated-text
    matplotlib

elastic =
    farm-haystack[elasticsearch]==1.16.1

faiss-gpu =
    faiss-gpu

faiss-cpu =
    faiss-cpu==1.7.2

qdrant =
    qdrant_haystack>=0.0.4

image-generation =
    diffusers

knowledge_graph =
    spacy
    pyvis
    networkx



[flake8]
ignore = E501
max-line-length = 100
