[options]
packages = find:

install_requires =
    farm-haystack==1.23.0
    farm-haystack[inference]==1.23.0
    transformers>=4.35.2
    datasets
    evaluate
    pandas
    nltk
    tqdm
    numba
    openpyxl
    numpy
    protobuf==3.20.2
    ujson
    accelerate
    fastapi
    uvicorn
    Pillow==10.1.0

[options.extras_require]
dev =
    black
    isort
    pytest
    pre-commit

benchmark =
    beir
    kilt @ git+https://github.com/facebookresearch/KILT.git

ui =
    streamlit
    st-annotated-text
    matplotlib
    streamlit_chat

elastic =
    farm-haystack[elasticsearch]

colbert =
    colbert-ai

faiss-gpu =
    faiss-gpu

faiss-cpu =
    faiss-cpu

qdrant =
    qdrant-haystack

knowledge_graph =
    spacy
    pyvis
    networkx

quantize_reranker =
    opencv-python-headless
    intel-extension-for-transformers==1.1
    neural_compressor==2.1.1
    pytrec_eval
    transformers>=4.28.1
    datasets >= 1.8.0
    sentencepiece !=0.1.92
    protobuf==3.20.2
    torch==1.13.1
    onnx==1.14.0
    onnxruntime==1.13.1
    onnxruntime-extensions==0.8.0
    sentence-transformers==2.2.2

intel =
    intel-extension-for-pytorch
    optimum[neural-compressor]

llama_cpp =
    llama-cpp-python

[flake8]
ignore = E501
max-line-length = 100
